--- a/style.css
+++ b/style.css
@@ -20,17 +20,17 @@ h1{
 }
 
 #colorValue{
-    margin: 0 auto;
+    margin: 30px;
     text-align: center;
 }
 
 #answer{
-    margin: 0 auto;
+    margin: 30px;
     text-align: center;
 }
 
 #reset{
-    margin: 0 auto;
+    margin: 30px;
     text-align: center;
 }
 
