--- a/style.css
+++ b/style.css
@@ -59,8 +59,10 @@ body {
   
   @keyframes rainbow {
     0%   {background-color: red;}
-    20%  {background-color: yellow;}
-    40%  {background-color: green;}
-    80% {background-color: blue;}
-    100% {background-color: purple;}
+    18%  {background-color: orange;}
+    34%  {background-color: yellow;}
+    50%  {background-color: green;}
+    66%  {background-color: blue;}
+    82%  {background-color: purple;}
+    100% {background-color: red;
   }
