--- a/style.css
+++ b/style.css
@@ -64,5 +64,5 @@ body {
     50%  {background-color: green;}
     66%  {background-color: blue;}
     82%  {background-color: purple;}
-    100% {background-color: red;
+    100% {background-color: red;}
   }
