--- a/style.css
+++ b/style.css
@@ -43,13 +43,15 @@ h1{
 
 body {
     font-family: verdana;
+    padding: 0;
+    margin: 0;
 }
 
 #colorBox {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 500px;
+    width: 100%;
     height: 25px;
     background-color: red;
     animation-name: rainbow;
