--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ h1{
     text-align: center;
 }
 
-#reset-button{
+#resetButton{
     padding: 10px;
     background: none;
     border: 1px solid #000;
